// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component behaviour toggles theme when dropdown option is chosen 1`] = `
<div
  className="test--theme"
  id="test"
>
  <label
    className="test--theme"
    htmlFor="dropdown__select"
  />
  <select
    className="test--theme"
    id="dropdown__select"
    onChange={[Function]}
  >
    <option
      disabled={true}
      hidden={true}
    />
    <option
      className="test--theme"
      id="dropdown__option-0"
      value="zero"
    >
      ZERO
    </option>
    <option
      className="test--theme"
      id="dropdown__option-1"
      value="one"
    >
      ONE
    </option>
  </select>
</div>
`;

exports[`Dropdown component rendering renders Dropdown 1`] = `
<div
  id="test"
>
  <label
    htmlFor="dropdown__select"
  />
  <select
    id="dropdown__select"
    onChange={[Function]}
  >
    <option
      disabled={true}
      hidden={true}
    />
  </select>
</div>
`;

exports[`Dropdown component rendering renders Dropdown when passed options and theme 1`] = `
<div
  className="test--theme"
  id="test"
>
  <label
    className="test--theme"
    htmlFor="dropdown__select"
  />
  <select
    className="test--theme"
    id="dropdown__select"
    onChange={[Function]}
  >
    <option
      disabled={true}
      hidden={true}
    />
    <option
      className="test--theme"
      id="dropdown__option-0"
      value="light"
    >
      light
    </option>
    <option
      className="test--theme"
      id="dropdown__option-1"
      value="dark"
    >
      dark
    </option>
    <option
      className="test--theme"
      id="dropdown__option-2"
      value="halloween"
    >
      halloween
    </option>
  </select>
</div>
`;
